force-app/main/default/objects/Contact_Us__c/Contact_Us__c.object-meta.xml
<CustomObject>
    <label>Contact Us</label>
    <nameField>
        <displayFormat>CU-{0000}</displayFormat>
        <label>Contact Us Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Us</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>