force-app/main/default/objects/Contact_Us__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contact Us</relationshipLabel>
    <relationshipName>Contact_Us</relationshipName>
    <type>Lookup</type>
</CustomField>