force-app/main/default/objects/Contact_Us__c/fields/Convert_to_Lead_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Convert_to_Lead_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert to Lead Opportunity</label>
    <type>Checkbox</type>
</CustomField>