force-app/main/default/objects/Contact_Us__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <label>Organization</label>
    <type>TextArea</type>
</CustomField>