force-app/main/default/objects/Contact_Us__c/fields/Primary_Campaign_Source__c.field-meta.xml
<CustomField>
    <fullName>Primary_Campaign_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Campaign Source</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contact Us</relationshipLabel>
    <relationshipName>Contact_Us</relationshipName>
    <type>Lookup</type>
</CustomField>