force-app/main/default/objects/Contact_Us__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>The URL where the requestor came from.</description>
    <inlineHelpText>The URL where the requestor came from.</inlineHelpText>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>