force-app/main/default/objects/Contact_Us__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received Request</fullName>
                <default>true</default>
                <label>Received Request</label>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
            <value>
                <fullName>No Response Needed</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
            <value>
                <fullName>Converted to Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>