force-app/main/default/objects/Contact_Us__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Article Submissions</fullName>
            </value>
            <value>
                <fullName>Editorial</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Advertising</fullName>
            </value>
            <value>
                <fullName>Subscriptions</fullName>
            </value>
            <value>
                <fullName>Editorial and Article Submissions</fullName>
                <isActive>false</isActive>
                <label>Editorial and Article Submissions</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Press Releases</fullName>
                <isActive>false</isActive>
                <label>Press Releases</label>
            </value>
            <value>
                <fullName>Website Bugs</fullName>
                <isActive>false</isActive>
                <label>Website Bugs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>