force-app/main/default/objects/Contact_Us__c/listViews/Contact_Us_Editorial_Open.listView-meta.xml
<ListView>
    <fullName>Contact_Us_Editorial_Open</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Message__c</columns>
    <columns>Organization__c</columns>
    <columns>Status__c</columns>
    <columns>Topic__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Topic__c</field>
        <operation>equals</operation>
        <value>Editorial</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Received Request</value>
    </filters>
    <label>Contact Us - Editorial - Open</label>
</ListView>