force-app/main/default/objects/Contact_Us__c/listViews/Contact_Us_Marked_as_Spam.listView-meta.xml
<ListView>
    <fullName>Contact_Us_Marked_as_Spam</fullName>
    <columns>NAME</columns>
    <columns>Organization__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Topic__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Spam</value>
    </filters>
    <label>Contact Us - Marked as Spam</label>
</ListView>