force-app/main/default/objects/Contact_Us__c/listViews/Contact_Us_Open_Article_Submissions.listView-meta.xml
<ListView>
    <fullName>Contact_Us_Open_Article_Submissions</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Message__c</columns>
    <columns>Organization__c</columns>
    <columns>Status__c</columns>
    <columns>Topic__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Topic__c</field>
        <operation>equals</operation>
        <value>Article Submissions</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Received Request</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Bigham</value>
    </filters>
    <label>Article Submissions (Private) - Open</label>
</ListView>