force-app/main/default/objects/Contact_Us__c/listViews/Contact_Us_Open_Requests_Other.listView-meta.xml
<ListView>
    <fullName>Contact_Us_Open_Requests_Other</fullName>
    <columns>NAME</columns>
    <columns>Organization__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Topic__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Received Request</value>
    </filters>
    <filters>
        <field>Topic__c</field>
        <operation>equals</operation>
        <value>Other</value>
    </filters>
    <label>Contact Us - Open Requests - Other</label>
</ListView>