force-app/main/default/objects/Contact_Us__c/listViews/Contact_Us_Other_Backup_Management.listView-meta.xml
<ListView>
    <fullName>Contact_Us_Other_Backup_Management</fullName>
    <columns>NAME</columns>
    <columns>Organization__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Phone__c</columns>
    <columns>Topic__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Received Request</value>
    </filters>
    <filters>
        <field>Topic__c</field>
        <operation>equals</operation>
        <value>Other</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>2/16/2024 12:00 AM</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Valdez</value>
    </filters>
    <label>Contact Us - Other - Backup Management</label>
</ListView>